--- a/index.html
+++ b/index.html
@@ -19,16 +19,18 @@
             <div class="nav-right">
                 <div class="nav-logo">
                     <label for="logo">
-                        <img src="./allimages/logo.png" alt="bluechipimage">
+                        <a href="./index.html">
+                            <img src="./allimages/logo.png" alt="bluechipimage">
+                        </a>
                     </label>
                 </div>
                 <div class="nav-menu">
                     <ul class="main-menu">
-                        <li>We</li>
-                        <li>Our Offerings</li>
+                        <li><a href="./we.html">We</a></li>
+                        <li><a href="./ouroffering.html">Our Offerings</a></li>
                         <li>Our Victories</li>
                         <li>Moments</li>
-                        <li>Connect</li>
+                        <li><a href="./contact.html">Connect</a></li>
                     </ul>
                 </div>
             </div>
