--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             <div class="hero-top">
                 <div class="hero-right-content">
                     <span class="hero-coloured">A dedicate old</span><br>
-                    <span class="hero-text">extensive financial advisory and <br> services provider enabling
-                        our</span><br>
+                    <span class="hero-text">extensive financial advisory and services provider enabling
+                        our</span>
                     <strong class="hero-strong">Clients Financial growth</strong>
                 </div>
                 <div class="hero-right-btn">
@@ -323,15 +323,15 @@
                     OUR OFFERING
                 </div>
                 <div class="offering-header">
-                    Enabling financial<br> growth and security
+                    Enabling financial growth and security
                 </div>
                 <div class="offering-content-1">
-                    We are the Bluechip group of companies with below business<br> entities under the group. Bluechip
+                    We are the Bluechip group of companies with below business entities under the group. Bluechip
                     financials Market Ltd.
                 </div>
                 <div class="offering-content-2">
-                    An international online Forex and CFDs trading firm offering 24<br>
-                    hours' access to a diverse reange of trading products including<br> forex currency pair,
+                    An international online Forex and CFDs trading firm offering 24
+                    hours' access to a diverse reange of trading products including forex currency pair,
                     commodities,futures,indices and stocks.
                 </div>
                 <div class="offering-points">
