--- a/contact.html
+++ b/contact.html
@@ -60,10 +60,10 @@
                     CONTACT
                 </div>
                 <div class="contact-form-right-header">
-                    How can we Empower<br> you?
+                    How can we Empower you?
                 </div>
                 <div class="contact-form-content">
-                    We bring the breathe of our experience and industry<br>
+                    We bring the breathe of our experience and industry
                     knowledge to help you succeed
                 </div>
             </div>
