--- a/ouroffering.html
+++ b/ouroffering.html
@@ -64,19 +64,19 @@
                         BlueChip fx
                     </div>
                     <div class="header-content">
-                        A perfect base for forex trading and stock market investment.<br>
-                        Launched in 2021, Bluechip fx is a young trading platform and to its<br>
-                        credit still boasts a satisfied customer base of thousands of active<br>
-                        user worldwide.The platform provides easy access to investable<br>
-                        products such as currencies, foreign stocks and bonds, commodities<br>
-                        and indices.The minds behind bluechip FX worked closely with<br>
-                        renowned institutional investors until 2021 to provide financial<br>
+                        A perfect base for forex trading and stock market investment.
+                        Launched in 2021, Bluechip fx is a young trading platform and to its
+                        credit still boasts a satisfied customer base of thousands of active
+                        user worldwide.The platform provides easy access to investable
+                        products such as currencies, foreign stocks and bonds, commodities
+                        and indices.The minds behind bluechip FX worked closely with
+                        renowned institutional investors until 2021 to provide financial
                         advisory services and Porfolio management services(PMS).<br><br>
-                        Having entered the private investment market and added many<br>
-                        clients to our small group BLuechip FX now wants to complete with<br>
-                        the services of world class brokers.All of this and at the same time<br>
-                        improving the quality of life for our customers.As we speak,<br>
-                        the company has earned up to 500,000 brokerage deals from its secure<br>
+                        Having entered the private investment market and added many
+                        clients to our small group BLuechip FX now wants to complete with
+                        the services of world class brokers.All of this and at the same time
+                        improving the quality of life for our customers.As we speak,
+                        the company has earned up to 500,000 brokerage deals from its secure
                         deals and strives to provide regular investment returns for everyone.
                     </div>
                 </div>
@@ -93,14 +93,14 @@
                     Acre n yard
                 </div>
                 <div class="acre-content">
-                    A newly integrated member of the Bluechip Group.Acre N'Yard is a<br>
-                    real estate investigation vertical in India and Dubai delivered by<br>
+                    A newly integrated member of the Bluechip Group.Acre N'Yard is a
+                    real estate investigation vertical in India and Dubai delivered by
                     experienced investment managers at Bluechip Investments.<br><br>
-                    Acre N'Yard is focused om enabling real estate investments for all<br>
-                    investor groups. Both investment pools and private investments in<br>
-                    luxury real estate are available to all traders.Acre N'Yard operates<br>
-                    under a real estate investment trust methodology, allowing traders<br>
-                    to invest directly in real estate in the Indian and UAE markets in<br>
+                    Acre N'Yard is focused om enabling real estate investments for all
+                    investor groups. Both investment pools and private investments in
+                    luxury real estate are available to all traders.Acre N'Yard operates
+                    under a real estate investment trust methodology, allowing traders
+                    to invest directly in real estate in the Indian and UAE markets in
                     both common currencies.
                 </div>
             </div>
@@ -118,16 +118,16 @@
                         BlueChip TradeX-
                     </div>
                     <div class="tradex-content">
-                        BlueChip TradeX is an international online Forex and CFD trading<br>
-                        company that provides 24 hour access to a wide variety of trading<br>
-                        instruments including forex currency pairs, commodities, futures,<br>
-                        indices and stocks. Benifit from high liquidity, low spreads, mobile<br>
-                        trading,technical analysis and more through Bluechip TradeX and the<br>
+                        BlueChip TradeX is an international online Forex and CFD trading
+                        company that provides 24 hour access to a wide variety of trading
+                        instruments including forex currency pairs, commodities, futures,
+                        indices and stocks. Benifit from high liquidity, low spreads, mobile
+                        trading,technical analysis and more through Bluechip TradeX and the
                         world-renowned MetaTrader 5 trading platform<br>
-                        We maintain a safe trading environment and maintain high standards<br>
-                        to provide the best customized trading conditions for each client.We<br>
+                        We maintain a safe trading environment and maintain high standards
+                        to provide the best customized trading conditions for each client.We
                         help forex traders develop the knowledge and skills they need to<br><br>
-                        trade efficientlyand responsibly.With daily market analysis, we bring<br>
+                        trade efficientlyand responsibly.With daily market analysis, we bring
                         our beloved clients the latest market insights everyday.
                     </div>
                 </div>
