--- a/we.html
+++ b/we.html
@@ -61,15 +61,15 @@
                         About Us
                     </div>
                     <div class="aboutus-body">
-                        Established since more than a decade to provide extensive<br> financial advisory and services
+                        Established since more than a decade to provide extensive financial advisory and services
                         enabling
-                        our client's financial<br> growth and security. We organically grew in the fields of<br>
+                        our client's financial growth and security. We organically grew in the fields of
                         Insurace,
                         Indian equity,
-                        Forex trading, business setup<br> services, Real Estate, Asset Creation and Gold Trading<br>
+                        Forex trading, business setup services, Real Estate, Asset Creation and Gold Trading
                         (Tangible and Intangible).<br><br>
 
-                        Scoping for opportunitiesas a trait in the DNA led us to<br> venture into the entertainment
+                        Scoping for opportunitiesas a trait in the DNA led us to venture into the entertainment
                         business
                         as well.
                     </div>
@@ -95,7 +95,7 @@
                     </div>
                     <div class="aboutus-card-content">
                         To facilitate everyone to pursue their dreams by making them
-                        <br> financially independent
+                        financially independent
                     </div>
                 </div>
                 <div class="aboutusbottom-card1">
@@ -106,11 +106,11 @@
                         MISSION
                     </div>
                     <div class="aboutus-card-content">
-                        Using our deep knowledge of customer oriented technical <br> innovation in trading to offer a
+                        Using our deep knowledge of customer oriented technical innovation in trading to offer a
                         wide range
-                        of well-designed <br> and structured financial products, cateringto people with<br> different
-                        risk appetites, thus leading to an unmatched<br> investment experience, financial success as
-                        long lasting <br>
+                        of well-designed and structured financial products, cateringto people with different
+                        risk appetites, thus leading to an unmatched investment experience, financial success as
+                        long lasting
                         mutual trust
                     </div>
                 </div>
@@ -122,9 +122,9 @@
                         VALUES
                     </div>
                     <div class="aboutus-card-content">
-                        He philosophy is simple: our values are focused on our pivotal<br> points which is you our
-                        customer, you OUR employees and<br> YOU our stakeholders. Our organizations core beliefs
-                        provide<br>
+                        He philosophy is simple: our values are focused on our pivotal points which is you our
+                        customer, you OUR employees andYOU our stakeholders. Our organizations core beliefs
+                        provide
                         us with a puropse and direction for you.
                     </div>
                 </div>
@@ -145,9 +145,9 @@
                         TRUST &<br> OPENBOOK
                     </div>
                     <div class="trust-content">
-                        We engage with our internal and external stakeholders<br>
-                        to build realtionships abased on an organically flourished<br>
-                        mutual trust built on the foundation of being<br>
+                        We engage with our internal and external stakeholders
+                        to build realtionships based on an organically flourished
+                        mutual trust built on the foundation of being
                         transparent in every aspect.
                     </div>
                 </div>
@@ -175,10 +175,10 @@
                         EMPATHY
                     </div>
                     <div class="empathy-content">
-                        We work together with you to assess your appetite for risk<br>
-                        and your appetite to earn, to customize offerings suiting your<br>
+                        We work together with you to assess your appetite for risk
+                        and your appetite to earn, to customize offerings suiting your
                         investor profile.<br><br>
-                        We take into account very detail of your lifecycle stage and <br>
+                        We take into account very detail of your lifecycle stage and
                         situation to ensure you are guided in the right direction.
                     </div>
                 </div>
@@ -199,10 +199,10 @@
                         EXCELLENCE
                     </div>
                     <div class="exellence-content">
-                        We keep abreast with technology breakthroughs in <br>
-                        our line of business and incorporate the smae in various<br>
-                        trafe and market analysis tools and techniques, in user<br>
-                        experiences making it simple for our valued<br>
+                        We keep abreast with technological breakthroughs in
+                        our line of business and incorporate the same in various
+                        trafe and market analysis tools and techniques, in user
+                        experiences making it simple for our valued
                         stakeholders to engage with our products.
                     </div>
                 </div>
