--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         </a>
                     </label>
                 </div>
-                <div class="nav-menu">
+                <div class="nav-menu" id="navmenu">
                     <ul class="main-menu">
                         <li><a href="./we.html">We</a></li>
                         <li><a href="./ouroffering.html">Our Offerings</a></li>
@@ -33,6 +33,9 @@
                         <li><a href="./contact.html">Connect</a></li>
                     </ul>
                 </div>
+            </div>
+            <div class="burger1" onclick="burger()">
+                <i class="fa-solid fa-bars" id="faburger"></i>
             </div>
             <div class="nav-btn">
                 <button type="submit" class="nav-btn1"><i class="fa-regular fa-calendar-days"></i> Book an
