--- a/contact.html
+++ b/contact.html
@@ -28,8 +28,8 @@
                     <ul class="main-menu">
                         <li> <a href="./we.html">We</a></li>
                         <li><a href="./ouroffering.html">Our Offerings</a></li>
-                        <li>Our Victories</li>
-                        <li>Moments</li>
+                        <li><a href="./victories.html">Our Victories</a></li>
+                        <li><a href="./moments.html">Moments</a></li>
                         <li style="text-decoration: underline;"><a href="./contact.html">Connect</a></li>
                     </ul>
                 </div>
