--- a/victories.html
+++ b/victories.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./allcss/ouroffering.css">
-    <title>BlueChip</title>
+    <link rel="stylesheet" href="./allcss/victories.css">
+    <title>Our Victories</title>
 </head>
 
 <body>
@@ -27,8 +27,8 @@
                 <div class="nav-menu" id="navmenu">
                     <ul class="main-menu">
                         <li><a href="./we.html">We</a></li>
-                        <li><a href="./ouroffering.html" style="text-decoration: underline;">Our Offerings</a></li>
-                        <li><a href="./victories.html">Our Victories</a></li>
+                        <li><a href="./ouroffering.html">Our Offerings</a></li>
+                        <li style="text-decoration: underline;"><a href="./victories.html">Our Victories</a></li>
                         <li><a href="./moments.html">Moments</a></li>
                         <li><a href="./contact.html">Connect</a></li>
                     </ul>
@@ -43,44 +43,36 @@
             </div>
         </div>
     </div>
+
+
     <!-- navigation ends -->
     <!-- hero section starts -->
     <div class="hero">
         <div class="hero-insider">
             <div class="hero-content">
-                Our Offerings
+                Our Victories
             </div>
         </div>
     </div>
     <!-- hero section ends -->
-
     <!-- header section starts -->
     <div class="header">
         <div class="header-insider">
             <div class="header-right">
-                <img src="./allimages//businesswoman-trader-looking-laptop-tablet-smartphone-with-graphs-analysis-candle-line-office-room.png"
-                    alt="" class="header-img">
+                <img src="./allimages/TRADEE.png" alt="" class="header-img">
             </div>
             <div class="header-left">
                 <div class="header-left-inner">
                     <div class="header-header">
-                        BlueChip fx
+                        Fastest growing platforms in forex expo 2022
                     </div>
                     <div class="header-content">
-                        A perfect base for forex trading and stock market investment.
-                        Launched in 2021, Bluechip fx is a young trading platform and to its
-                        credit still boasts a satisfied customer base of thousands of active
-                        user worldwide.The platform provides easy access to investable
-                        products such as currencies, foreign stocks and bonds, commodities
-                        and indices.The minds behind bluechip FX worked closely with
-                        renowned institutional investors until 2021 to provide financial
-                        advisory services and Porfolio management services(PMS).<br><br>
-                        Having entered the private investment market and added many
-                        clients to our small group BLuechip FX now wants to complete with
-                        the services of world class brokers.All of this and at the same time
-                        improving the quality of life for our customers.As we speak,
-                        the company has earned up to 500,000 brokerage deals from its secure
-                        deals and strives to provide regular investment returns for everyone.
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste delectus, veniam itaque nostrum
+                        ullam iure voluptatem dolores pariatur quas tenetur. Quos accusantium fuga dignissimos est neque
+                        illo nobis eligendi autem.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa fugiat
+                        eos itaque, obcaecati,<br><br>
+                        debitis asperiores corrupti architecto harum, quis accusamus molestiae exercitationem.
+                        Blanditiis, nobis! Debitis cumque eum aliquid fugit fuga!
                     </div>
                 </div>
             </div>
@@ -93,18 +85,8 @@
         <div class="acre-insider">
             <div class="acre-left">
                 <div class="acre-left-header">
-                    Acre n yard
-                </div>
-                <div class="acre-content">
-                    A newly integrated member of the Bluechip Group.Acre N'Yard is a
-                    real estate investigation vertical in India and Dubai delivered by
-                    experienced investment managers at Bluechip Investments.<br><br>
-                    Acre N'Yard is focused om enabling real estate investments for all
-                    investor groups. Both investment pools and private investments in
-                    luxury real estate are available to all traders.Acre N'Yard operates
-                    under a real estate investment trust methodology, allowing traders
-                    to invest directly in real estate in the Indian and UAE markets in
-                    both common currencies.
+                    First forex company to become associate sponsers for blockbuster movie releases all over the MENA
+                    region.
                 </div>
             </div>
         </div>
@@ -118,31 +100,39 @@
             <div class="tradex-left">
                 <div class="tradex-left-inner">
                     <div class="tradex-header">
-                        BlueChip TradeX-
+                        First Financial Advisory to be displayed on Burj Khalifa
                     </div>
                     <div class="tradex-content">
-                        BlueChip TradeX is an international online Forex and CFD trading
-                        company that provides 24 hour access to a wide variety of trading
-                        instruments including forex currency pairs, commodities, futures,
-                        indices and stocks. Benifit from high liquidity, low spreads, mobile
-                        trading,technical analysis and more through Bluechip TradeX and the
-                        world-renowned MetaTrader 5 trading platform<br>
-                        We maintain a safe trading environment and maintain high standards
-                        to provide the best customized trading conditions for each client.We
-                        help forex traders develop the knowledge and skills they need to<br><br>
-                        trade efficientlyand responsibly.With daily market analysis, we bring
-                        our beloved clients the latest market insights everyday.
+                        " Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic perspiciatis atque nisi qui eaque
+                        laborum velit, aspernatur totam quidem! Fugit sunt cum sapiente animi nulla hic deleniti quae
+                        dolore vel. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit consequuntur
+                        delectus, deserunt animi minus impedit repellendus ab cumque similique! Reprehenderit magni eum
+                        incidunt vel adipisci minima in numquam cupiditate delectus.<br><br>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus ullam exercitationem
+                        officiis, odio non ad accusamus molestias repudiandae. Ab fugit iste suscipit quasi harum amet
+                        molestiae dolorem iure ullam non.
+                        "
                     </div>
                 </div>
             </div>
             <div class="tradex-right">
-                <img src="./allimages/workplace-trader-young-bearded-trader-wearing-eyeglasses-using-his-laptop-while-sitting-office.png"
+                <img src="./allimages/burj-khalifa-dubai-uae-tallest-skyscraper-building-world-travel-attraction-with-blue-pool-foreground.png"
                     alt="" class="tradex-img">
             </div>
         </div>
     </div>
 
     <!-- tradex section ends -->
+    <!-- final banner starts -->
+    <div class="finalbanner">
+        <div class="finalbanner-insider">
+            <div class="finalbanner-content">
+                And Many More
+            </div>
+        </div>
+    </div>
+    <!-- final banner ends -->
+
 
     <!-- footer starts -->
     <div class="footer">
@@ -241,7 +231,8 @@
     </div>
     <!-- final footer ends -->
 
-    <script src="./alljs/ouroffering.js"></script>
+
+    <script src="./alljs/victories.js"></script>
 </body>
 
 </html>
