wednesday 2nd commit

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <!-- hero section starts  -->
 
-        <div class="hero">
+        <div class="hero" id="hero">
             <div class="hero-insider">
                 <div class="hero-top">
                     <div class="hero-right-content">
