--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
                         <li><a href="./ouroffering.html">Our Offerings</a></li>
                         <li><a href="./victories.html">Our Victories</a></li>
                         <li><a href="./moments.html">Moments</a></li>
-                        <li style="text-decoration: underline;"><a href="./contact.html">Connect</a></li>
+                        <li><a href="./contact.html" style="color: #e25926;">Connect</a></li>
                     </ul>
                 </div>
             </div>
@@ -238,6 +238,7 @@
         </div>
     </div>
     <!-- final footer ends -->
+
 
     <script src="./alljs/connect.js"></script>
 
