--- a/ouroffering.html
+++ b/ouroffering.html
@@ -27,7 +27,7 @@
                 <div class="nav-menu" id="navmenu">
                     <ul class="main-menu">
                         <li><a href="./we.html">We</a></li>
-                        <li><a href="./ouroffering.html" style="text-decoration: underline;">Our Offerings</a></li>
+                        <li><a href="./ouroffering.html" style="color: #e25926;">Our Offerings</a></li>
                         <li><a href="./victories.html">Our Victories</a></li>
                         <li><a href="./moments.html">Moments</a></li>
                         <li><a href="./contact.html">Connect</a></li>
