--- a/moments.html
+++ b/moments.html
@@ -29,7 +29,7 @@
                         <li> <a href="./we.html">We</a></li>
                         <li><a href="./ouroffering.html">Our Offerings</a></li>
                         <li><a href="./victories.html">Our Victories</a></li>
-                        <li style="text-decoration: underline;"><a href="./moments.html">Moments</a></li>
+                        <li><a href="./moments.html" style="color: #e25926;">Moments</a></li>
                         <li><a href="./contact.html">Connect</a></li>
                     </ul>
                 </div>
