--- a/victories.html
+++ b/victories.html
@@ -28,7 +28,7 @@
                     <ul class="main-menu">
                         <li><a href="./we.html">We</a></li>
                         <li><a href="./ouroffering.html">Our Offerings</a></li>
-                        <li style="text-decoration: underline;"><a href="./victories.html">Our Victories</a></li>
+                        <li><a href="./victories.html" style="color: #e25926;">Our Victories</a></li>
                         <li><a href="./moments.html">Moments</a></li>
                         <li><a href="./contact.html">Connect</a></li>
                     </ul>
