--- a/we.html
+++ b/we.html
@@ -26,10 +26,10 @@
                 </div>
                 <div class="nav-menu" id="navmenu">
                     <ul class="main-menu">
-                        <li style="text-decoration: underline;"> <a href="./we.html">We</a></li>
+                        <li><a href="./we.html" style="color: #e25926;">We</a></li>
                         <li><a href="./ouroffering.html">Our Offerings</a></li>
-                        <li>Our Victories</li>
-                        <li>Moments</li>
+                        <li><a href="./victories.html">Our Victories</a></li>
+                        <li><a href="./moments.html">Moments</a></li>
                         <li><a href="./contact.html">Connect</a></li>
                     </ul>
                 </div>
